--- a/api/BUILD.gn
+++ b/api/BUILD.gn
@@ -38,7 +38,7 @@ rtc_source_set("callfactory_api") {
 if (!build_with_chromium) {
   rtc_library("create_peerconnection_factory") {
     visibility = [ "*" ]
-    allow_poison = [ "default_task_queue" ]
+    allow_poison = [ "default_task_queue", "audio_codecs" ]
     sources = [
       "create_peerconnection_factory.cc",
       "create_peerconnection_factory.h",
