--- a/pc/BUILD.gn
+++ b/pc/BUILD.gn
@@ -2026,6 +2026,8 @@ rtc_source_set("libjingle_peerconnection") {
   # TODO(bugs.webrtc.org/13661): Reduce visibility if possible
   visibility = [ "*" ]  # Used by Chrome and others
 
+  allow_poison = [ "audio_codecs" ]
+
   deps = [
     ":peerconnection",
     "../api:libjingle_peerconnection_api",
